# UniAlias

./: README.md  package-lock.json  package.json
dataset/: cjk_brackets.md  math.ipynb  math_unicode.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/dataset_mng/: dataset_mng.css  dataset_mng.js  index.html
frontend/help/: help.css  help.js  index.html
frontend/public/: help.html
frontend/settings/: index.html  settings.css  settings.js
frontend/src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/dataset/: cjk_brackets.csv  math_unicode.csv
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  trie.rs
src-tauri/src/dev-bin/: trie_test.rs
src-tauri/windows/fragments/: startup.wxs
