[package]
name = "unialias_lib"
version = "0.1.0"
description = "An application for efficiently inserting unicode characters using aliases."
authors = ["qnd101"]
edition = "2021"
default-run = "unialias_lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "unialias_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
enigo = "0.3.0"
#arc-swap = "1.7.1"
#rdev = "0.5.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
# windows = "0.61.1"
# raw-window-handle = "0.6.2"